--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
 </head>
 <body>
 <h1>Hello</h1>
-
+<header>
 <nav>
 	<ul>
 		<li>HELLO</li>
 		<li>ADELE</li>
 	</ul>
 </nav>
-
+</header>
 <p>Hello it's me i was wondering if after all this years you'd like to meet<br>
 to go over every thing they say that time supposed te heal you i've done much hearing<br>
 <strong>hello from the other side</strong> i must have calld tousand times </p>
